--- a/css/utility.css
+++ b/css/utility.css
@@ -2,7 +2,7 @@
 :root{
     --poppins: 'Poppins', sans-serif;
     --sans: 'Open Sans', sans-serif;
-    --green: #72b626;
+    --green: #64AE70;
     --black: #111;
     --nero: #252525;
     --transition: all 0.4s ease;
